tests/NormalTests/paczka1/small_fuzzy/31456676.err
Error in line 6: xinX S827 26,8
Error in line 8: xinX A529 42,8
Error in line 15: u3szxbnFLM S339 12,4
